feat: add bluenexus login choice

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,23 @@ FORWARDED_ALLOW_IPS='*'
 SCARF_NO_ANALYTICS=true
 DO_NOT_TRACK=true
 ANONYMIZED_TELEMETRY=false
+
+# OAuth Authentication
+# Enable OAuth signup
+ENABLE_OAUTH_SIGNUP=true
+# Enable OAuth email fallback (creates email as {user_id}.local when no email provided)
+ENABLE_OAUTH_EMAIL_FALLBACK=true
+# OAuth allowed domains
+OAUTH_ALLOWED_DOMAINS=*
+# Update user profile picture on each login from OAuth provider
+OAUTH_UPDATE_PICTURE_ON_LOGIN=true
+
+# BlueNexus OAuth (Local Development)
+# BlueNexus Account information without email, so ENABLE_OAUTH_EMAIL_FALLBACK must be enabled
+BLUENEXUS_CLIENT_ID=
+BLUENEXUS_CLIENT_SECRET=
+BLUENEXUS_OAUTH_SCOPE=
+BLUENEXUS_REDIRECT_URI=http://localhost:8080/oauth/bluenexus/callback
+BLUENEXUS_API_BASE_URL=https://localhost:3000
+BLUENEXUS_AUTHORIZATION_URL=http://localhost:3001/oauth/authorize
+BLUENEXUS_TOKEN_URL=https://localhost:3000/api/v1/auth/token
