feat: add bluenexus llm

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,5 @@ BLUENEXUS_REDIRECT_URI=http://localhost:8080/oauth/bluenexus/callback
 BLUENEXUS_API_BASE_URL=https://localhost:3000
 BLUENEXUS_AUTHORIZATION_URL=http://localhost:3001/oauth/authorize
 BLUENEXUS_TOKEN_URL=https://localhost:3000/api/v1/auth/token
+BLUENEXUS_LLM_API_BASE_URL=https://localhost:3000/api/v1
+BLUENEXUS_LLM_AUTO_ENABLE=True
