refactor: add ENABLE_BLUENEXUS and ENABLE_BLUENEXUS_SYNC to manage

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,16 @@ ENABLE_OAUTH_SIGNUP=true
 ENABLE_OAUTH_EMAIL_FALLBACK=true
 # OAuth allowed domains
 OAUTH_ALLOWED_DOMAINS=*
+# Verify TLS certificates for OAuth/OIDC calls (set to false for self-signed providers in local dev)
+OAUTH_SSL_VERIFY=true
 # Update user profile picture on each login from OAuth provider
 OAUTH_UPDATE_PICTURE_ON_LOGIN=true
+
+# ========================================
+# BlueNexus Integration
+# ========================================
+
+ENABLE_BLUENEXUS=True
 
 # BlueNexus OAuth (Local Development)
 # BlueNexus Account information without email, so ENABLE_OAUTH_EMAIL_FALLBACK must be enabled
@@ -42,3 +50,6 @@ BLUENEXUS_AUTHORIZATION_URL=http://localhost:3001/oauth/authorize
 BLUENEXUS_TOKEN_URL=https://localhost:3000/api/v1/auth/token
 BLUENEXUS_LLM_API_BASE_URL=https://localhost:3000/api/v1
 BLUENEXUS_LLM_AUTO_ENABLE=True
+
+# BlueNexus Data Sync
+ENABLE_BLUENEXUS_SYNC=True
