--- a/.env.example
+++ b/.env.example
@@ -22,34 +22,39 @@ DO_NOT_TRACK=true
 ANONYMIZED_TELEMETRY=false
 
 # OAuth Authentication
-# Enable OAuth signup
 ENABLE_OAUTH_SIGNUP=true
-# Enable OAuth email fallback (creates email as {user_id}.local when no email provided)
+# Creates email as {user_id}.local when no email provided (required for BlueNexus)
 ENABLE_OAUTH_EMAIL_FALLBACK=true
-# OAuth allowed domains
 OAUTH_ALLOWED_DOMAINS=*
-# Verify TLS certificates for OAuth/OIDC calls (set to false for self-signed providers in local dev)
+# Set to false for self-signed certs in local dev
 OAUTH_SSL_VERIFY=true
-# Update user profile picture on each login from OAuth provider
 OAUTH_UPDATE_PICTURE_ON_LOGIN=true
+
+# OAuth Token Encryption Keys (generate with: openssl rand -base64 32)
+OAUTH_SESSION_TOKEN_ENCRYPTION_KEY=
+OAUTH_CLIENT_INFO_ENCRYPTION_KEY=
+
+# OpenID Provider URL (for logout functionality)
+# OPENID_PROVIDER_URL=
 
 # ========================================
 # BlueNexus Integration
 # ========================================
 
-ENABLE_BLUENEXUS=True
+# Master switch - requires BLUENEXUS_CLIENT_ID and BLUENEXUS_CLIENT_SECRET
+ENABLE_BLUENEXUS=False
 
-# BlueNexus OAuth (Local Development)
-# BlueNexus Account information without email, so ENABLE_OAUTH_EMAIL_FALLBACK must be enabled
+# BlueNexus OAuth credentials (register your app at BlueNexus)
 BLUENEXUS_CLIENT_ID=
 BLUENEXUS_CLIENT_SECRET=
-BLUENEXUS_OAUTH_SCOPE=
-BLUENEXUS_REDIRECT_URI=http://localhost:8080/oauth/bluenexus/callback
-BLUENEXUS_API_BASE_URL=https://localhost:3000
-BLUENEXUS_AUTHORIZATION_URL=http://localhost:3001/oauth/authorize
-BLUENEXUS_TOKEN_URL=https://localhost:3000/api/v1/auth/token
-BLUENEXUS_LLM_API_BASE_URL=https://localhost:3000/api/v1
-BLUENEXUS_LLM_AUTO_ENABLE=True
 
-# BlueNexus Data Sync
-ENABLE_BLUENEXUS_SYNC=True
+# BlueNexus URLs
+# Backend API (https) - TOKEN_URL and LLM_API_URL are derived from this
+BLUENEXUS_API_BASE_URL=
+# Frontend OAuth (http, separate port)
+BLUENEXUS_AUTHORIZATION_URL=
+# Redirect URI - must match what's registered in BlueNexus
+BLUENEXUS_REDIRECT_URI=
+
+# Enable automatic sync of chats, notes, prompts to BlueNexus (requires 'user-data' scope)
+ENABLE_BLUENEXUS_SYNC=False
